kustomize/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: rust-rest
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deploymentconfig: rust-rest
  sessionAffinity: None
  type: ClusterIP
