kustomize/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: rust-rest
spec:
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
  to:
    kind: Service
    name: rust-rest
    weight: 100
  wildcardPolicy: None
